# erbi-practice

./: CMakeLists.txt  README  erbi.cc  erbi.hh  testtype.cc  testtype.hh
doc/: erbi.txt
